<resources>
    <string name="app_name">Kaktus</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="google_maps_key">AIzaSyAVLKZSbQQzZCRCuFUzSFLKdat8Bc8FMzw</string>

    <string name="facebook_app_id">447180619060798</string>
    <string name="fb_login_protocol_scheme">fb447180619060798</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="countryPrompt">Select country</string>
    <string name="cityPrompt">Select city</string>
    <string name="last_name">Last name</string>
    <string name="birth_date">Birth date</string>
    <string name="tourist">Tourist</string>
    <string name="guide">Guide</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="be_a_guru">Be a guru</string>
    <string name="login_text">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_want_to_be_a_guru">I WANT TO BE A GURU</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="select_photo">Select photo</string>
    <string name="salary">Per hour</string>
    <string name="finish">Finish</string>
    <string name="search_hint">Search people and places</string>
    <string name="title_activity_guide_details">GuideDetailsActivity</string>
    <string name="create_proposal">Create proposal</string>
    <string name="notification_click">Tap here to proceed</string>
    <string name="notifications">Notifications</string>
    <string name="change_proposal">Edit</string>
    <string name="confirm_proposal">Accept</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="cancel">Cancel</string>
    <string name="set_meeting_point">Set meeting point</string>
    <string name="start">Start guiding</string>
    <string name="title_activity_active_proposal">ActiveProposalActivity</string>
    <string name="end_proposal">End guiding</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset">Reset</string>
    <string name="max_hourly_rate">Max. hourly rate</string>
    <string name="min_rating">Min. rating</string>
    <string name="about">About me:</string>
    <string name="total_hours">Total hours</string>
    <string name="total_proposals">Total proposals</string>
    <string name="checkout">Checkout</string>
    <string name="select_interests">Select interests</string>
    <string name="empty_confirmed_text">Search for guru...</string>
    <string name="show_map">Show map</string>
    <string name="change_meeting_point">Change meeting point</string>
    <string name="skip">Skip</string>
    <string name="add_payment_method">Add payment method</string>
    <string name="add_payment_method_text">Add payment method to order GURU</string>
    <string name="paypal_account_email">PayPal account email</string>
    <string name="estimated_time">Estimated time</string>
    <string name="proposal_completed">Proposal completed</string>
    <string name="completed_proposal_guide_text">Money will be send to your paypayl account</string>
    <string name="comment">Comment</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="forgotten_password">Forgotten password</string>
    <string name="select_account_type">Select account type</string>
    <string name="tourist_text">Discover new places, our gurus will guide you!</string>
    <string name="kaktus_guru">Kaktus Guru</string>
    <string name="guru_text">Earn money by guiding total strangers in your city!</string>
    <string name="google_login">Sign up with Google</string>
    <string name="facebook_login">Sign up with Facebook</string>
    <string name="email_login">Sign up with Email</string>
    <string name="sign_up_text">Kaktus let\'s you discover amazing places you\'ve never even heard of</string>
    <string name="forgotten_password_text">Reset your password</string>
    <string name="reset_code">Reset code</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_earned">You have earned</string>
    <string name="find_user">Find user</string>
    <string name="waiting">Waiting for user</string>
    <string name="from">From</string>
    <string name="total_earned">Total earned</string>
    <string name="explorings">Tours</string>
    <string name="to">To</string>
    <string name="sort_by_interests">Sort by interests</string>
    <string name="free_guiding">Free guiding</string>
    <string name="satellite">Satellite</string>
    <string name="map">Map</string>
    <string name="agree_policy">I agree to Kaktus privacy policy</string>
    <string name="reject">Reject</string>
    <string name="select_languages">Select languages</string>
    <string name="meetingpoint_set">Meeting point has been set</string>
    <string name="meetingpoint_not_set">Meeting point not set</string>

</resources>
