<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.dmsoft.cityguide.Account.Registration.Step.RegisterGuideInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:ems="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary"
                    android:inputType="numberSigned" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/currencies_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>

        <CheckBox
            android:id="@+id/free_guiding_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_guiding"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/estimated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/estimated_time"
                android:inputType="numberDecimal"
                android:maxLength="2"
                android:ems="7"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estimated time:"
                android:layout_gravity="center"/>

            <NumberPicker
                android:id="@+id/estimated_picker"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/paypal_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/paypal_account_email"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/finish"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:theme="@style/green_button"
            android:text="@string/finish" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
